# fourbar

./: .gitignore  CMakeLists.txt
src/: algorithm.h  fourbar_linkage.cpp  fourbar_linkage.h  genetic_search.cpp  genetic_search.h  hausdorff_distance.cpp  hausdorff_distance.h  quadrilateral.cpp  quadrilateral.h  vec2.cpp  vec2.h  visual_debug.cpp  visual_debug.h
test/: evolver_tests.cpp  fourbar_linkage_tests.cpp  hausdorff_tests.cpp  position_solver_tests.cpp  vec2_tests.cpp
